<resources>
    <string name="app_name" translatable="false">Zalith Launcher</string>
    <string name="generic_close">Close</string>
    <string name="generic_return">Return</string>
    <string name="generic_edit">Edit</string>
    <string name="generic_share">Share</string>
    <string name="generic_move">Move</string>
    <string name="generic_add">New</string>
    <string name="generic_clone">Clone</string>
    <string name="generic_paste">Paste</string>
    <string name="generic_delete">Delete</string>
    <string name="generic_refresh">Refresh</string>
    <string name="generic_rename">Rename</string>
    <string name="generic_search">Search</string>
    <string name="generic_tip">Tip</string>
    <string name="generic_confirm">Confirm</string>
    <string name="generic_unknown">Unknown</string>
    <string name="generic_warning">Warning</string>
    <string name="generic_ok">OK</string>
    <string name="generic_error">Error</string>
    <string name="generic_load">Load</string>
    <string name="generic_name">Name</string>
    <string name="generic_restart">Restart</string>
    <string name="generic_reset">Reset</string>
    <string name="generic_save">Save</string>
    <string name="generic_unpacking">Unpacking %s</string>
    <string name="generic_error_field_empty">This field cannot be empty</string>
    <string name="generic_keyboard">Keyboard</string>
    <string name="generic_waiting">Please wait</string>
    <string name="generic_select">Select</string>
    <string name="generic_default">Default</string>
    <string name="generic_loading">Loading</string>
    <string name="generic_optional">Optional</string>
    <string name="generic_required">Required</string>
    <string name="generic_all">All</string>
    <string name="generic_wan">Ten Thousand</string>
    <string name="generic_yi">Billion</string>
    <string name="generic_login">Login</string>
    <string name="generic_wrong_tip">Something went wrong</string>
    <string name="generic_no_more_reminders">No more reminders</string>
    <string name="generic_input_invalid">The input is invalid, please try again</string>
    <string name="generic_input_invalid_character">The name contains an invalid character: "%s"</string>
    <string name="generic_input_too_small">The value is too small, it must be at least %s</string>
    <string name="generic_input_too_big">The value is too big, it can be at most %s</string>
    <string name="generic_copied">Copied</string>
    <string name="generic_image_preview">View Image</string>
    <string name="error_fatal">Zalith Launcher crashed unexpectedly</string>
    <string name="error_no_version">No version!</string>
    <string name="error_show_more">Show details</string>
    <string name="error_show_less">Hide details</string>
    <string name="option_force_close">Force Close</string>
    <string name="option_log_out">Log Output</string>
    <string name="option_send_custom_key">Send Custom Key Code</string>
    <string name="option_custom_control">Custom Control Layout</string>
    <string name="customctrl_editor_exit_title">Exit?</string>
    <string name="customctrl_editor_exit_msg">Are you sure you want to exit?</string>
    <string name="customctrl_editor_exit">Exit Editor</string>
    <string name="global_save_and_exit">Save and Exit</string>
    <string name="unnamed">Unnamed</string>
    <string name="version_installed">Installed</string>
    <string name="version_release">Release</string>
    <string name="version_snapshot">Snapshot</string>
    <string name="version_alpha">Alpha</string>
    <string name="version_beta">Beta</string>
    <string name="profiles_latest_snapshot">Latest Snapshot</string>
    <string name="profiles_latest_release">Latest Release</string>
    <string name="force_exit_confirm">Are you sure you want to force close?</string>
    <string name="autoram_info_msg">Memory set to %d MB</string>
    <string name="memory_warning_msg">The available memory (%d) is lower than the allocated memory (%d), which may cause the game to crash. If the game crashes, please change the configuration!</string>
    <string name="address_memory_warning_msg">The available free memory space (%d) is lower than the allocated memory (%d), which will cause a crash. If the game crashes, please adjust the memory allocation.</string>
    <string name="notif_channel_name">General</string>
    <string name="lazy_service_default_title">Pojav Foreground Service</string>
    <string name="progresslayout_tasks_in_progress">%d tasks in progress</string>
    <string name="notification_terminate">Terminate</string>
    <string name="notification_game_runs">The game is running!</string>
    <string name="tasks_ongoing">Tasks are being executed, please wait</string>
    <string name="mc_download_failed">Failed to download Minecraft! This may be due to poor network connection, incorrect file placement, etc.</string>
    <string name="toast_turn_on_gyro">Gyro control needs to be enabled first to use!</string>
    <string name="microsoft_login_retry_later">Your actions are too frequent, please try again later</string>
    <string name="storage_required">Zalith Launcher requires external storage, please reconnect and restart the software</string>
    <string name="dialog_select_jar">Select Jar File</string>
    <string name="percent_format">%d%%</string>
    <string name="version_select_hint">Select Version</string>
    <string name="notif_error_occured">An error occurred</string>
    <string name="notif_error_occured_desc">Click to view details</string>
    <string name="dl_tampered_manifest_title">File Verification Warning</string>
    <string name="dl_tampered_manifest"><![CDATA[The game version manifest on the mirror does not match the official Mojang version manifest, which means it may have been tampered with.<br/>
        <b>This is not safe. Your personal information may be at risk if you continue.</b><br/>
        If you still want to use the mirror, press \"Turn off manifest checks\" and start the download again.<br/>
        If you want to use the official download source, press \"Switch to official site\" and start the download again.<br/>]]></string>
    <string name="dl_turn_off_manifest_checks">Turn off game version list checks</string>
    <string name="dl_switch_to_official_site">Switch to official download source</string>
    <string name="notif_download_finished">The game is ready to launch</string>
    <string name="notif_download_finished_desc">Click here to launch it!</string>
    <string name="notification_permission_dialog_title">Permission Request</string>
    <string name="notification_permission_dialog_text">Zalith Launcher requires notification permission to prevent game file downloads from stopping when you leave the app. Without this permission, Android may stop your download progress when Zalith Launcher is in the background.</string>
    <string name="notification_permission_toast">You can change your mind at any time by going to \"System Settings\"</string>
    <string name="newdl_starting">Reading game metadata…</string>
    <string name="newdl_downloading_metadata">Downloading game metadata (%s)</string>
    <string name="newdl_downloading_game_files">Downloading game files… (%d/%d, %.2f MB)</string>
    <string name="log_view_button_scroll_off">Auto-scroll: Off</string>
    <string name="log_view_button_scroll_on">Auto-scroll: On</string>
    <string name="log_view_button_output_off">Output: Off</string>
    <string name="log_view_button_output_on">Output: On</string>
    <string name="log_view_label_log_output">Log Output:</string>
    <string name="execute_jar_failed_to_read_file">Failed to read .jar file</string>
    <string name="execute_jar_incompatible_runtime">Executing .jar feature is incompatible with Java %d</string>
    <string name="mod_download_progress">Downloading installer for %s</string>
    <string name="mod_forge_searching">Searching for Forge version number</string>
    <string name="mod_neoforge_searching">Searching for NeoForge version number</string>
    <string name="mod_failed_to_load_list">Failed to load version list!</string>
    <string name="mod_no_installer">Sorry, this version of %s does not have an installer and is not yet supported</string>
    <string name="mod_fabric_cant_read_meta">Failed to read %s loader metadata, please try again later</string>
    <string name="mod_optifine_failed_to_scrape">Failed to gather OptiFine installation data</string>
    <string name="mod_optifine_progress">Downloading %s</string>
    <string name="create_profile">Create New Instance</string>
    <string name="create_profile_vanilla_like_versions">Vanilla-like Versions</string>
    <string name="create_profile_modded_versions">Modded Versions</string>
    <string name="create_profile_vanilla">Create Vanilla Instance</string>
    <string name="create_profile_optifine">Create OptiFine Instance</string>
    <string name="create_profile_forge">Create Forge Instance</string>
    <string name="create_profile_neoforge">Create NeoForge Instance</string>
    <string name="create_profile_fabric">Create Fabric Instance</string>
    <string name="create_profile_quilt">Create Quilt Instance</string>
    <string name="create_profile_modpack">Create Modpack Instance</string>
    <string name="control_primary">Left Click</string>
    <string name="control_secondary">Right Click</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: Off</string>
    <string name="control_mouseon">Mouse: On</string>
    <string name="customctrl_toggle">Toggleable</string>
    <string name="customctrl_size">Size</string>
    <string name="customctrl_mapping">Mapping</string>
    <string name="customctrl_orientation">Orientation</string>
    <string name="customctrl_background_color">Background Color</string>
    <string name="customctrl_corner_radius">Corner Radius</string>
    <string name="customctrl_stroke_width">Stroke Width</string>
    <string name="customctrl_stroke_color">Stroke Color</string>
    <string name="customctrl_button_opacity">Button Opacity</string>
    <string name="customctrl_addbutton">Add Button</string>
    <string name="customctrl_addbutton_drawer">Add Drawer</string>
    <string name="customctrl_addbutton_joystick">Add Joystick</string>
    <string name="customctrl_addsubbutton">Add Sub-Button</string>
    <string name="customctrl_selectdefault">Select Default Control Layout</string>
    <string name="customctrl_export">Export Control Layout</string>
    <string name="customctrl_passthru">Mouse Passthrough</string>
    <string name="customctrl_swipeable">Swipeable</string>
    <string name="customctrl_forward_lock">Forward Lock</string>
    <string name="customctrl_absolute_tracking">Force Finger Tracking</string>
    <string name="controls_tip">Tap the gear icon to open the menu ⚙\nTap a button to customize: edit, resize, delete, or remap</string>
    <string name="controls_add_control_button">Button</string>
    <string name="controls_add_control_drawer">Drawer</string>
    <string name="controls_visibility">Visibility</string>
    <string name="controls_in_game">In-Game</string>
    <string name="controls_in_menu">In-Menu</string>
    <string name="controls_orientation_up">Up</string>
    <string name="controls_orientation_down">Down</string>
    <string name="controls_orientation_left">Left</string>
    <string name="controls_settings_title">Control Layout Editor Settings</string>
    <string name="replacement_customcontrol">Replace Control Layout</string>
    <string name="mouse_settings_title">Virtual Mouse Settings</string>
    <string name="file_create_folder">Create folder</string>
    <string name="file_add_file">Add file</string>
    <string name="setting_category_game_menu">Game Menu</string>
    <string name="setting_resolution_scaler_title">Resolution Scaling</string>
    <string name="setting_gyro_sensitivity_title">Gyroscope Control Sensitivity</string>
</resources>