<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_card"
    android:padding="@dimen/_8sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:gravity="center_horizontal"
        android:text="@string/setting_category_game_menu"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/force_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_item"
                android:text="@string/option_force_close"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/log_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/option_log_out"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/send_custom_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/option_send_custom_key"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/mouse_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/mouse_settings_title"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/resolution_scaler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/setting_resolution_scaler_title"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/gyro_sensitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/setting_gyro_sensitivity_title"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/replacement_customcontrol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/replacement_customcontrol"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/edit_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/option_custom_control"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>