<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/top_log_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/menu_bar"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_25sdp"
        android:text="@string/log_view_label_log_output"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintStart_toStartOf="@+id/top_log_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/content_log_toggle_autoscroll"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textOff="@string/log_view_button_scroll_off"
        android:textOn="@string/log_view_button_scroll_on"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/content_log_toggle_log"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/content_log_toggle_log"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textOff="@string/log_view_button_output_off"
        android:textOn="@string/log_view_button_output_on"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/log_view_cancel"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/log_view_cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.kdt.DefocusableScrollView
        android:id="@+id/content_log_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0.8"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_log_view">

        <TextView
            android:id="@+id/content_log_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textIsSelectable="true" />

    </com.kdt.DefocusableScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>